--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,7 @@
         "helsingborg-stad/api-project-manager-integration": ">=1.8.0",
         "helsingborg-stad/algolia-index-modularity-addon": "^1.0",
         "helsingborg-stad/algolia-index": "^1.0",
-        "helsingborg-stad/municipio-innovation-theme": "dev-develop",
+        "helsingborg-stad/municipio-innovation-theme": "1.4.0",
         "helsingborg-stad/action-municipio-childtheme": "^1.1.5",
         "helsingborg-stad/algolia-index-js-searchpage-addon": "^1.0",
         "wpackagist-plugin/acf-to-rest-api": "^3.2",
